# fraud-detection-ai

./: .gitignore  README.md  app.py  main.py  pyproject.toml
docs/: EDA-summary.md
models/: evaluation_report.txt  random_forest_model.joblib
notebooks/: EDA.ipynb
src/data/: preprocess.py
src/models/: classifier.py
src/utils/: metrics.py
