[project]
name = "fraud-detection-ai"
version = "0.1.0"
description = "AI-based fraud detection system"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jupyter",
    "notebook",
    "tensorflow",
    "keras",
    "torch",
    "flask",
    "gradio"
]